# docling_neo4j

./: .env  .gitignore  IMPROVEMENTS.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  env.example  front_wip.md  main.py  pyproject.toml  run_pipeline.py  test_components.py  test_vlm_mlx.py
docs/: PDF_PARSER_ADVANCED.md  VLM_INSTALLATION_GUIDE.md  VLM_PYTHON_SETUP.md  VLM_QUICK_START.md  VLM_SETUP_GUIDE.md
scripts/: clear-neo4j.py  explore-neo4j.py  export-only.py  setup-neo4j-auth.sh  test-services.sh
src/: config.py
src/api/: main.py
src/pipeline/: __init__.py  embeddings.py  llm_processor.py  neo4j_ingestion.py  neo4j_setup.py  pdf_parser.py  retrieval.py
src/web/templates/: index.html  viewer.html
